--- a/style.less
+++ b/style.less
@@ -1,5 +1,5 @@
 /*
-Theme Name: alexmejias
+Theme Name: alexmejias2
 Theme URI: http://wordpress.org/extend/themes/twentyeleven
 Description: my test theme
 Author: the WordPress team
@@ -22,11 +22,11 @@ body{
 	}
 	#cont{
 		width:960px;
-		margin:0 15%;
-		height:auto;
+		margin:0 auto;
+		/*height:auto;*/
 		
 		#left{
-			width:auto;
+			width:188px;
 			height:600px;
 			background:#96C63F;
 			color: #FFF;
@@ -80,7 +80,7 @@ body{
 			}/*END #NAV*/
 		}/*END #LEFT*/
 		#right{
-			width:550px;
+			width:732px;
 			height:100%;
 			background:#1A1A1A;
 			float:left;
@@ -90,9 +90,29 @@ body{
 			a img.alignright {float:right; margin:0 0 1em 1em}
 			a img.alignleft {float:left; margin:0 1em 1em 0}
 			a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-	
+			#projects{
+				margin:126px 0 0 50px;
+				ul{
+					width:100%;
+					margin:0;
+					padding:0;
+					list-style-type:none;
+					li{
+						float:left;
+						padding-right:0;
+						width:33%;
+						padding-bottom:30px;
 
-
+						img{
+							padding-bottom:5px;
+						}
+						p{
+							font-size:12px;
+							line-height:20px;
+						}
+					}
+				}
+			}
 			#post{
 				margin:126px 0 0 50px;
 				
