--- a/css/inc/_navigation.scss
+++ b/css/inc/_navigation.scss
@@ -1,5 +1,5 @@
-nav {
-	margin-top: 20px;
+aside nav {
+	// margin-top: 20px;
 }
 
 /* menu icon */
@@ -7,79 +7,52 @@ nav {
 	display: none; /* hide menu icon initially */
 }
 
-#nav,#nav li {
-	margin: 0;
-	padding: 0;
-}
-#nav li {
-	list-style: none;
-	// float: left;
-	margin-right: 5px;
+#projects{
+	li {
+		list-style: none;
+		margin-right: 5px;
+
+		a{
+			padding: 4px 15px;
+			display: block;
+			color: #000;
+			background: #ecebeb;
+
+			&:hover{
+				background-color:#f8f8f8;
+			}
+		}
+	}
 }
 
-/* nav link */
-#nav a {
-	padding: 4px 15px;
-	display: block;
-	color: #000;
-	background: #ecebeb;
-}
-#nav a:hover {
-	background: #f8f8f8;
-}
-
-/* nav dropdown */
-#nav ul {
-	// background: #fff;
-	// padding: 2px;
-	// position: absolute;
-	// border: solid 1px #ccc;
-	// display: none; /* hide dropdown */
-	// width: 200px;
-}
-#nav ul li {
-	float: none;
-	margin: 0;
-	padding: 0;
-}
-#nav li:hover > ul {
-	display: block; /* show dropdown on hover */
-}
-
-/************************************************************************************
-MOBILE
-*************************************************************************************/
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
 
 	/* nav-wrap */
-	nav {
+	aside nav {
 		position:absolute;
 		top:15px;
 		right:10px;
 		margin:0;
 	}
 
-	/* menu icon */
 	#menu-icon {
 		color: #000;
 		width: 42px;
 		height: 30px;
 		background: #ecebeb url(img/menu-icon.png) no-repeat 10px center;
-		// padding: 8px 10px 0 42px;
 		cursor: pointer;
 		border: solid 1px #666;
 		display: block; /* show menu icon */
 
 
+		&:hover {
+			background-color: #f8f8f8;
+		}
+		.active {
+			background-color: #bbb;
+		}
 	}
-	#menu-icon:hover {
-		background-color: #f8f8f8;
-	}
-	#menu-icon.active {
-		background-color: #bbb;
-	}
-	/* main nav */
-	#nav {
+	#projects {
 		clear: both;
 		position: absolute;
 		top: 38px;
@@ -90,43 +63,36 @@ MOBILE
 		background: #f8f8f8;
 		border: solid 1px #999;
 		display: none; /* visibility will be toggled with jquery */
+
+		li {
+			clear: both;
+			float: none;
+			margin: 5px 0 5px 10px;
+
+			a{
+				font: inherit;
+				background: none;
+				display: inline;
+				padding: 0;
+				color: #666;
+				border: none;
+
+				&:hover{
+					background:none;
+					color:#000;
+				}
+			}
+		}
 	}
-	#nav li {
-		clear: both;
-		float: none;
-		margin: 5px 0 5px 10px;
-	}
-	#nav a,
-	#nav ul a {
-		font: inherit;
-		background: none;
-		display: inline;
-		padding: 0;
-		color: #666;
-		border: none;
-	}
-	#nav a:hover,	#nav ul a:hover {
-		background: none;
-		color: #000;
-	}
+
 	/* dropdown */
-	#nav ul {
-		width: auto;
-		position: static;
-		display: block;
-		border: none;
-		background: inherit;
-	}
-	#nav ul li {
-		margin: 3px 0 3px 15px;
-	}
 
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 481px) {
 
-	/* ensure #nav is visible on desktop version */
-	#nav {
+	/* ensure #projects is visible on desktop version */
+	#projects {
 		display: block !important;
 	}
 
