--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*
+ /*
 Theme Name: alexmejias2
 Theme URI: http://wordpress.org/extend/themes/twentyeleven
 Description: my test theme
@@ -240,11 +240,6 @@ dd {
 /*
  * Addresses paddings set differently in IE6/7
  */
-menu,
-ol,
-ul {
-  padding: 0 0 0 40px; }
-
 /*
  * Corrects list images handled incorrectly in IE7
  */
@@ -428,54 +423,30 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-nav {
-  margin-top: 20px; }
-
 /* menu icon */
 #menu-icon {
   display: none;
   /* hide menu icon initially */ }
 
-#nav, #nav li {
-  margin: 0;
-  padding: 0; }
-
-#nav li {
+#projects li {
   list-style: none;
   margin-right: 5px; }
+  #projects li a {
+    padding: 4px 15px;
+    display: block;
+    color: #000;
+    background: #ecebeb; }
+    #projects li a:hover {
+      background-color: #f8f8f8; }
 
-/* nav link */
-#nav a {
-  padding: 4px 15px;
-  display: block;
-  color: #000;
-  background: #ecebeb; }
-
-#nav a:hover {
-  background: #f8f8f8; }
-
-/* nav dropdown */
-#nav ul li {
-  float: none;
-  margin: 0;
-  padding: 0; }
-
-#nav li:hover > ul {
-  display: block;
-  /* show dropdown on hover */ }
-
-/************************************************************************************
-MOBILE
-*************************************************************************************/
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   /* nav-wrap */
-  nav {
+  aside nav {
     position: absolute;
     top: 15px;
     right: 10px;
     margin: 0; }
 
-  /* menu icon */
   #menu-icon {
     color: #000;
     width: 42px;
@@ -485,15 +456,12 @@ MOBILE
     border: solid 1px #666;
     display: block;
     /* show menu icon */ }
+    #menu-icon:hover {
+      background-color: #f8f8f8; }
+    #menu-icon .active {
+      background-color: #bbb; }
 
-  #menu-icon:hover {
-    background-color: #f8f8f8; }
-
-  #menu-icon.active {
-    background-color: #bbb; }
-
-  /* main nav */
-  #nav {
+  #projects {
     clear: both;
     position: absolute;
     top: 38px;
@@ -505,38 +473,25 @@ MOBILE
     border: solid 1px #999;
     display: none;
     /* visibility will be toggled with jquery */ }
+    #projects li {
+      clear: both;
+      float: none;
+      margin: 5px 0 5px 10px; }
+      #projects li a {
+        font: inherit;
+        background: none;
+        display: inline;
+        padding: 0;
+        color: #666;
+        border: none; }
+        #projects li a:hover {
+          background: none;
+          color: #000; }
 
-  #nav li {
-    clear: both;
-    float: none;
-    margin: 5px 0 5px 10px; }
-
-  #nav a,
-  #nav ul a {
-    font: inherit;
-    background: none;
-    display: inline;
-    padding: 0;
-    color: #666;
-    border: none; }
-
-  #nav a:hover, #nav ul a:hover {
-    background: none;
-    color: #000; }
-
-  /* dropdown */
-  #nav ul {
-    width: auto;
-    position: static;
-    display: block;
-    border: none;
-    background: inherit; }
-
-  #nav ul li {
-    margin: 3px 0 3px 15px; } }
-@media screen and (min-width: 600px) {
-  /* ensure #nav is visible on desktop version */
-  #nav {
+  /* dropdown */ }
+@media screen and (min-width: 481px) {
+  /* ensure #projects is visible on desktop version */
+  #projects {
     display: block !important; } }
 a {
   text-decoration: none;
@@ -545,13 +500,9 @@ a {
     color: #000; }
 
 header {
-  margin-top: 20px;
-  width: 100%; }
-  header h1 {
-    margin-left: 20px;
-    display: inline; }
+  margin-right: 20px !important;
+  width: 100%;
+  text-align: center; }
 
-aside {
-  padding: 20px; }
-  aside ul {
-    padding: 0px; }
+aside ul {
+  padding: 0px; }
