--- a/css/inc/_navigation.scss
+++ b/css/inc/_navigation.scss
@@ -1,7 +1,3 @@
-aside nav {
-	// margin-top: 20px;
-}
-
 /* menu icon */
 #menu-icon {
 	display: none; /* hide menu icon initially */
@@ -18,32 +14,23 @@ aside nav {
 			color: #000;
 			background: #ecebeb;
 
-			&:hover{
-				background-color:#f8f8f8;
-			}
 		}
 	}
 }
 
 @media screen and (max-width: 480px) {
 
-	/* nav-wrap */
 	aside nav {
-		position:absolute;
-		top:15px;
-		right:10px;
-		margin:0;
+		margin:0 auto;
+		width:80%;
 	}
 
 	#menu-icon {
-		color: #000;
-		width: 42px;
-		height: 30px;
+		padding:5px;
+		text-align:center;
 		background: #ecebeb url(img/menu-icon.png) no-repeat 10px center;
 		cursor: pointer;
-		border: solid 1px #666;
 		display: block; /* show menu icon */
-
 
 		&:hover {
 			background-color: #f8f8f8;
@@ -54,33 +41,27 @@ aside nav {
 	}
 	#projects {
 		clear: both;
-		position: absolute;
-		top: 38px;
-		right:-1px;
-		width: 160px;
 		z-index: 10000;
-		padding: 5px;
 		background: #f8f8f8;
-		border: solid 1px #999;
 		display: none; /* visibility will be toggled with jquery */
+		margin:5px auto 0;
 
 		li {
 			clear: both;
 			float: none;
-			margin: 5px 0 5px 10px;
+			width:100%;
+			padding:5px 0;
 
 			a{
 				font: inherit;
 				background: none;
 				display: inline;
 				padding: 0;
-				color: #666;
 				border: none;
-
-				&:hover{
-					background:none;
-					color:#000;
-				}
+				padding:5px; 
+			}
+			&:hover{
+				background-color:#ecebeb;
 			}
 		}
 	}
