--- a/style.css
+++ b/style.css
@@ -436,24 +436,17 @@ table {
     display: block;
     color: #000;
     background: #ecebeb; }
-    #projects li a:hover {
-      background-color: #f8f8f8; }
 
 @media screen and (max-width: 480px) {
-  /* nav-wrap */
   aside nav {
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    margin: 0; }
+    margin: 0 auto;
+    width: 80%; }
 
   #menu-icon {
-    color: #000;
-    width: 42px;
-    height: 30px;
+    padding: 5px;
+    text-align: center;
     background: #ecebeb url(img/menu-icon.png) no-repeat 10px center;
     cursor: pointer;
-    border: solid 1px #666;
     display: block;
     /* show menu icon */ }
     #menu-icon:hover {
@@ -463,30 +456,25 @@ table {
 
   #projects {
     clear: both;
-    position: absolute;
-    top: 38px;
-    right: -1px;
-    width: 160px;
     z-index: 10000;
-    padding: 5px;
     background: #f8f8f8;
-    border: solid 1px #999;
     display: none;
-    /* visibility will be toggled with jquery */ }
+    /* visibility will be toggled with jquery */
+    margin: 5px auto 0; }
     #projects li {
       clear: both;
       float: none;
-      margin: 5px 0 5px 10px; }
+      width: 100%;
+      padding: 5px 0; }
       #projects li a {
         font: inherit;
         background: none;
         display: inline;
         padding: 0;
-        color: #666;
-        border: none; }
-        #projects li a:hover {
-          background: none;
-          color: #000; }
+        border: none;
+        padding: 5px; }
+      #projects li:hover {
+        background-color: #ecebeb; }
 
   /* dropdown */ }
 @media screen and (min-width: 481px) {
@@ -499,10 +487,24 @@ a {
   a:visited, a:hover {
     color: #000; }
 
+ul {
+  padding: 0;
+  margin: 0; }
+
 header {
   margin-right: 20px !important;
   width: 100%;
   text-align: center; }
+  header h1 {
+    margin-bottom: 10px; }
+  header p {
+    margin: 10px 0; }
+  header ul {
+    display: inline-block;
+    margin-bottom: 20px; }
+    header ul li {
+      float: left;
+      padding: 0 20px; }
 
 aside ul {
   padding: 0px; }
