--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,10 @@ a{
 		color:#000;
 	}
 }
-
+ul{
+	padding:0;
+	margin:0;
+}
 
 header{
 	// margin:20px !important;
@@ -26,9 +29,20 @@ header{
 	text-align:center;
 	// background-color: #ccc;
 	h1{
-		// display: inline;
+		margin-bottom:10px;
 	}
-
+	p{
+		margin:10px 0;
+	}
+	ul{
+		display:inline-block;
+		margin-bottom:20px;
+		li{
+			// display:inline;
+			float:left;
+			padding:0 20px;
+		}
+	}
 } //end header
 
 aside{
