--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-;/*
+/*
 Theme Name: alexmejias2
 Theme URI: http://wordpress.org/extend/themes/twentyeleven
 Description: my test theme
@@ -8,6 +8,7 @@ Version: 1.3
 -------------------------------------------------------------- */
 @import 'css/inc/normalize';
 @import 'css/inc/navigation';
+@import 'css/inc/zocial';
 
 // GLOBALS
 a{
@@ -59,6 +60,27 @@ header{
 // }
 #content{
 	padding:10px;
+	width:90%;
+	margin:0 auto;
+
+	.gallery-item{
+		width:100%;
+	}
+}
+
+footer{
+	width:90%;
+	margin:0 auto 20px;
+	text-align:center;
+
+	h3{
+		margin-bottom:10px;
+	}
+
+	.zocial{
+		font-size:12px;
+		margin:3px;
+	}
 }
 @media screen and (max-width:480px){
 
