--- a/style.css
+++ b/style.css
@@ -449,7 +449,8 @@ table {
     background: #ecebeb url(img/menu-icon.png) no-repeat 10px center;
     cursor: pointer;
     display: block;
-    /* show menu icon */ }
+    /* show menu icon */
+    font-weight: 500; }
     #menu-icon:hover {
       background-color: #f8f8f8; }
     #menu-icon .active {
@@ -474,8 +475,10 @@ table {
         padding: 0;
         border: none;
         padding: 5px; }
-      #projects li:hover {
+      #projects li:hover, #projects li.current_page_item {
         background-color: #ecebeb; }
+        #projects li:hover a, #projects li.current_page_item a {
+          margin-left: 7px; }
 
   /* dropdown */ }
 @media screen and (min-width: 481px) {
@@ -1250,6 +1253,9 @@ button:-moz-focus-inner {
   border: 0;
   padding: 0; }
 
+* {
+  font-family: 'Dosis',Helvetica,Verdana,sans-serif; }
+
 a {
   text-decoration: none;
   color: #000; }
@@ -1264,15 +1270,20 @@ body {
   background: white url(img/noise.png) repeat center center; }
 
 header {
+  color: #fff;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  background: #BADA55;
+  margin-bottom: 10px;
+  padding: 3px 0; }
+  header a, header a:hover, header a:visited {
+    color: #fff; }
   header h1 {
-    margin-bottom: 10px; }
+    margin: 0 0 4px 0; }
   header p {
-    margin: 10px 0; }
+    margin: 6px 3px; }
   header ul {
-    display: inline-block;
-    margin-bottom: 20px; }
+    display: inline-block; }
     header ul li {
       float: left;
       padding: 0 20px; }
