--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,9 @@ Version: 1.3
 @import 'css/inc/zocial';
 
 // GLOBALS
+*{
+	font-family:'Dosis',Helvetica,Verdana,sans-serif;
+}
 a{
 	text-decoration:none;
 	color:#000;
@@ -30,18 +33,25 @@ body{
 header{
 	// margin:20px !important;
 	// margin-right:20px !important;
+	color:#fff;
 	width:100%;
 	text-align:center;
+	background:#BADA55;
+	margin-bottom:10px;
+	padding:3px 0;
+	a,a:hover,a:visited{
+		color:#fff;
+	}
 	// background-color: #ccc;
 	h1{
-		margin-bottom:10px;
+		margin:0 0 4px 0;
 	}
 	p{
-		margin:10px 0;
+		margin:6px 3px;
 	}
 	ul{
 		display:inline-block;
-		margin-bottom:20px;
+		// margin-bottom:20px;
 		li{
 			// display:inline;
 			float:left;
