--- a/style.css
+++ b/style.css
@@ -1253,7 +1253,7 @@ button:-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-* {
+h1, h2, h3, h4, h5, h6, p, a, li {
   font-family: 'Dosis',Helvetica,Verdana,sans-serif; }
 
 a {
@@ -1277,7 +1277,8 @@ header {
   margin-bottom: 10px;
   padding: 3px 0; }
   header a, header a:hover, header a:visited {
-    color: #fff; }
+    color: #fff;
+    margin: 0 3px; }
   header h1 {
     margin: 0 0 4px 0; }
   header p {
@@ -1292,11 +1293,14 @@ header {
   padding: 10px;
   width: 90%;
   margin: 0 auto; }
+  #content h1 {
+    margin: 5px 0; }
   #content p {
     width: 100%; }
     #content p img {
       max-width: 100%;
-      height: auto; }
+      height: auto;
+      margin: 5px 0; }
 
 footer {
   width: 90%;
@@ -1307,3 +1311,11 @@ footer {
   footer .zocial {
     font-size: 12px;
     margin: 3px; }
+
+@media screen and (min-width:481px) {
+  aside nav {
+    width: 100%;
+    text-align: center; }
+    aside nav ul li {
+      display: inline-block;
+      margin: 2px; } }
