--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@ Version: 1.3
 @import 'css/inc/zocial';
 
 // GLOBALS
-*{
+h1,h2,h3,h4,h5,h6,p,a,li{
 	font-family:'Dosis',Helvetica,Verdana,sans-serif;
 }
 a{
@@ -41,6 +41,7 @@ header{
 	padding:3px 0;
 	a,a:hover,a:visited{
 		color:#fff;
+		margin:0 3px
 	}
 	// background-color: #ccc;
 	h1{
@@ -73,11 +74,16 @@ header{
 	width:90%;
 	margin:0 auto;
 
+	h1{
+		margin:5px 0;
+	}
 	p{
 		width:100%;
+		// margin:
 		img{
 			max-width:100%;
 			height:auto;
+			margin:5px 0;
 		}
 	}
 }
@@ -88,7 +94,7 @@ footer{
 	text-align:center;
 
 	h3{
-		margin-bottom:10px;
+		margin-bottom:10px; 
 	}
 
 	.zocial{
@@ -98,4 +104,21 @@ footer{
 }
 @media screen and (max-width:480px){
 
+}
+@media screen and (min-width:481px){
+	aside{
+		nav{
+			width:100%;
+			text-align: center;
+
+			// width:95%
+			ul{
+				li{
+					display:inline-block;
+					margin:2px;
+				}
+			}
+		}
+
+	}
 }
