--- a/css/inc/_navigation.scss
+++ b/css/inc/_navigation.scss
@@ -12,7 +12,7 @@
 			padding: 4px 15px;
 			display: block;
 			color: #000;
-			background: #ecebeb;
+			background: $grey_light;
 
 		}
 	}
@@ -28,13 +28,13 @@
 	#menu-icon {
 		padding:5px;
 		text-align:center;
-		background: #ecebeb url(img/menu-icon.png) no-repeat 10px center;
+		background: $grey_light url(img/menu-icon.png) no-repeat 10px center;
 		cursor: pointer;
 		display: block; /* show menu icon */
 		font-weight:500;
 
 		&:hover {
-			background-color: #f8f8f8;
+			background-color: $grey_dark;
 		}
 		.active {
 			background-color: #bbb;
@@ -62,7 +62,7 @@
 				padding:5px;
 			}
 			&:hover,&.current_page_item{
-				background-color:#ecebeb;
+				background-color:$grey_light;
 				a{
 					margin-left:7px;
 				}
