--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@ Author: the WordPress team
 Author URI: http://alexismejias.com/
 Version: 1.3
 -------------------------------------------------------------- */
+@import 'css/inc/variables';
 @import 'css/inc/normalize';
 @import 'css/inc/navigation';
 @import 'css/inc/zocial';
@@ -36,7 +37,7 @@ header{
 	color:#fff;
 	width:100%;
 	text-align:center;
-	background:#BADA55;
+	background:$header_color;
 	margin-bottom:10px;
 	padding:3px 0;
 	a,a:hover,a:visited{
@@ -61,14 +62,6 @@ header{
 	}
 } //end header
 
-// aside{
-// 	// width:20%;
-// 	// background-color: #ccc;
-// 	// padding:20px;
-// 	ul{
-// 		padding: 0px;
-// 	}
-// }
 #content{
 	padding:10px;
 	width:90%;
@@ -80,6 +73,9 @@ header{
 	p{
 		width:100%;
 		// margin:
+		a{
+			background:$grey_light;
+		}
 		img{
 			max-width:100%;
 			height:auto;
@@ -94,7 +90,7 @@ footer{
 	text-align:center;
 
 	h3{
-		margin-bottom:10px; 
+		margin-bottom:10px;
 	}
 
 	.zocial{
@@ -102,16 +98,13 @@ footer{
 		margin:3px;
 	}
 }
-@media screen and (max-width:480px){
 
-}
 @media screen and (min-width:481px){
 	aside{
 		nav{
 			width:100%;
 			text-align: center;
 
-			// width:95%
 			ul{
 				li{
 					display:inline-block;
