--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@ Version: 1.3
 @import 'css/inc/variables';
 @import 'css/inc/normalize';
 @import 'css/inc/navigation';
-@import 'css/inc/zocial';
+// @import 'css/inc/zocial';
 
 // GLOBALS
 h1,h2,h3,h4,h5,h6,p,a,li{
