--- a/style.css
+++ b/style.css
@@ -582,7 +582,7 @@ footer {
       margin: 5px 2px;
       list-style-type: none; }
 
-@media screen and (min-width:481px) {
+@media screen and (min-width:481px) and (max-width:720px) {
   aside nav {
     width: 100%;
     text-align: center; }
@@ -591,3 +591,15 @@ footer {
       margin: 2px; }
       aside nav ul li a:hover {
         background: #ecebeb; } }
+@media screen and (min-width:721px) {
+  header {
+    height: 80px; }
+    header #header_content, header #global {
+      float: left; }
+
+  aside {
+    width: 25%;
+    float: left; }
+    aside nav float:left
+    li {
+      display: list-item; } }
