--- a/style.scss
+++ b/style.scss
@@ -163,7 +163,7 @@ footer{
 			float:left;
 		}
 		#header_content{
-			margin-left: 25px;
+			margin-left: 2.3%;
 			p{
 				margin-top:0;
 			}
@@ -176,13 +176,25 @@ footer{
 		}
 	}
 	aside{
-		width:25%;
+		// width:25%;
 		float:left;
+		width:auto;
+		margin-left:1.5%;
 		nav {
-			float:left
-			li{
-				display:list-item;
+			// float:left
+			padding:5px 0;
+			background:$grey_light;
+			#projects{
+				li{
+					display:list-item;
+					margin-right:0
+				}
 			}
 		}
+	}
+
+	footer{
+		float:left;
+		width:100%;
 	}
 }
