--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ hgroup,
 nav,
 section,
 summary {
-  display: block; }
+  display: block;
+}
 
 /*
  * Corrects inline-block display not defined in IE6/7/8/9 & FF3
@@ -34,7 +35,8 @@ canvas,
 video {
   display: inline-block;
   *display: inline;
-  *zoom: 1; }
+  *zoom: 1;
+}
 
 /*
  * Prevents modern browsers from displaying 'audio' without controls
@@ -42,14 +44,16 @@ video {
  */
 audio:not([controls]) {
   display: none;
-  height: 0; }
+  height: 0;
+}
 
 /*
  * Addresses styling for 'hidden' attribute not present in IE7/8/9, FF3, S4
  * Known issue: no IE6 support
  */
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 /* =============================================================================
    Base
@@ -66,7 +70,8 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 2 */
   -ms-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 2 */
+}
 
 /*
  * Addresses font-family inconsistency between 'textarea' and other form elements.
@@ -76,13 +81,15 @@ button,
 input,
 select,
 textarea {
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
 
 /*
  * Addresses margins handled incorrectly in IE6/7
  */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /* =============================================================================
    Links
@@ -91,7 +98,8 @@ body {
  * Addresses outline displayed oddly in Chrome
  */
 a:focus {
-  outline: thin dotted; }
+  outline: thin dotted;
+}
 
 /*
  * Improves readability when focused and also mouse hovered in all browsers
@@ -99,7 +107,8 @@ a:focus {
  */
 a:hover,
 a:active {
-  outline: 0; }
+  outline: 0;
+}
 
 /* =============================================================================
    Typography
@@ -110,63 +119,75 @@ a:active {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0;
+}
 
 h2 {
   font-size: 1.5em;
-  margin: 0.83em 0; }
+  margin: 0.83em 0;
+}
 
 h3 {
   font-size: 1.17em;
-  margin: 1em 0; }
+  margin: 1em 0;
+}
 
 h4 {
   font-size: 1em;
-  margin: 1.33em 0; }
+  margin: 1.33em 0;
+}
 
 h5 {
   font-size: 0.83em;
-  margin: 1.67em 0; }
+  margin: 1.67em 0;
+}
 
 h6 {
   font-size: 0.75em;
-  margin: 2.33em 0; }
+  margin: 2.33em 0;
+}
 
 /*
  * Addresses styling not present in IE7/8/9, S5, Chrome
  */
 abbr[title] {
-  border-bottom: 1px dotted; }
+  border-bottom: 1px dotted;
+}
 
 /*
  * Addresses style set to 'bolder' in FF3+, S4/5, Chrome
 */
 b,
 strong {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 blockquote {
-  margin: 1em 40px; }
+  margin: 1em 40px;
+}
 
 /*
  * Addresses styling not present in S5, Chrome
  */
 dfn {
-  font-style: italic; }
+  font-style: italic;
+}
 
 /*
  * Addresses styling not present in IE6/7/8/9
  */
 mark {
   background: #ff0;
-  color: #000; }
+  color: #000;
+}
 
 /*
  * Addresses margins set differently in IE6/7
  */
 p,
 pre {
-  margin: 1em 0; }
+  margin: 1em 0;
+}
 
 /*
  * Corrects font family set oddly in IE6, S4/5, Chrome
@@ -178,7 +199,8 @@ kbd,
 samp {
   font-family: monospace, serif;
   _font-family: 'courier new', monospace;
-  font-size: 1em; }
+  font-size: 1em;
+}
 
 /*
  * Improves readability of pre-formatted text in all browsers
@@ -186,7 +208,8 @@ samp {
 pre {
   white-space: pre;
   white-space: pre-wrap;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 /*
  * 1. Addresses CSS quotes not supported in IE6/7
@@ -194,16 +217,19 @@ pre {
  */
 /* 1 */
 q {
-  quotes: none; }
+  quotes: none;
+}
 
 /* 2 */
 q:before,
 q:after {
   content: '';
-  content: none; }
+  content: none;
+}
 
 small {
-  font-size: 75%; }
+  font-size: 75%;
+}
 
 /*
  * Prevents sub and sup affecting line-height in all browsers
@@ -214,13 +240,16 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 /* =============================================================================
    Lists
@@ -232,10 +261,12 @@ dl,
 menu,
 ol,
 ul {
-  margin: 0em 0; }
+  margin: 0em 0;
+}
 
 dd {
-  margin: 0 0 0 40px; }
+  margin: 0 0 0 40px;
+}
 
 /*
  * Addresses paddings set differently in IE6/7
@@ -246,7 +277,8 @@ dd {
 nav ul,
 nav ol {
   list-style: none;
-  list-style-image: none; }
+  list-style-image: none;
+}
 
 /* =============================================================================
    Embedded content
@@ -260,13 +292,15 @@ img {
   border: 0;
   /* 1 */
   -ms-interpolation-mode: bicubic;
-  /* 2 */ }
+  /* 2 */
+}
 
 /*
  * Corrects overflow displayed oddly in IE9
  */
 svg:not(:root) {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /* =============================================================================
    Figures
@@ -275,7 +309,8 @@ svg:not(:root) {
  * Addresses margin not present in IE6/7/8/9, S5, O11
  */
 figure {
-  margin: 0; }
+  margin: 0;
+}
 
 /* =============================================================================
    Forms
@@ -284,7 +319,8 @@ figure {
  * Corrects margin displayed oddly in IE6/7
  */
 form {
-  margin: 0; }
+  margin: 0;
+}
 
 /*
  * Define consistent border, margin, and padding
@@ -292,7 +328,8 @@ form {
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
+  padding: 0.35em 0.625em 0.75em;
+}
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
@@ -306,7 +343,8 @@ legend {
   white-space: normal;
   /* 2 */
   *margin-left: -7px;
-  /* 3 */ }
+  /* 3 */
+}
 
 /*
  * 1. Corrects font size not being inherited in all browsers
@@ -324,7 +362,8 @@ textarea {
   vertical-align: baseline;
   /* 3 */
   *vertical-align: middle;
-  /* 3 */ }
+  /* 3 */
+}
 
 /*
  * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
@@ -332,7 +371,8 @@ textarea {
 button,
 input {
   line-height: normal;
-  /* 1 */ }
+  /* 1 */
+}
 
 /*
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
@@ -349,14 +389,16 @@ input[type="submit"] {
   -webkit-appearance: button;
   /* 2 */
   *overflow: visible;
-  /* 3 */ }
+  /* 3 */
+}
 
 /*
  * Re-set default cursor for disabled elements
  */
 button[disabled],
 input[disabled] {
-  cursor: default; }
+  cursor: default;
+}
 
 /*
  * 1. Addresses box sizing set to content-box in IE8/9
@@ -373,7 +415,8 @@ input[type="radio"] {
   *height: 13px;
   /* 3 */
   *width: 13px;
-  /* 3 */ }
+  /* 3 */
+}
 
 /*
  * 1. Addresses appearance set to searchfield in S5, Chrome
@@ -385,14 +428,16 @@ input[type="search"] {
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   /* 2 */
-  box-sizing: content-box; }
+  box-sizing: content-box;
+}
 
 /*
  * Removes inner padding and search cancel button in S5, Chrome on OS X
  */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 /*
  * Removes inner padding and border in FF3+
@@ -401,7 +446,8 @@ input[type="search"]::-webkit-search-cancel-button {
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 /*
  * 1. Removes default vertical scrollbar in IE6/7/8/9
@@ -411,7 +457,8 @@ textarea {
   overflow: auto;
   /* 1 */
   vertical-align: top;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* =============================================================================
    Tables
@@ -421,28 +468,34 @@ textarea {
  */
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 /* menu icon */
 #menu-icon {
   display: none;
-  /* hide menu icon initially */ }
+  /* hide menu icon initially */
+}
 
 #projects li {
   list-style: none;
-  margin-right: 5px; }
-  #projects li a {
-    padding: 4px 15px;
-    display: block;
-    color: #000;
-    background: #f8f8f8; }
-    #projects li a:hover {
-      background: #ecebeb; }
+  margin-right: 5px;
+}
+#projects li a {
+  padding: 4px 15px;
+  display: block;
+  color: #000;
+  background: #f8f8f8;
+}
+#projects li a:hover {
+  background: #ecebeb;
+}
 
 @media screen and (max-width: 480px) {
   aside nav {
     margin: 0 auto;
-    width: 90%; }
+    width: 90%;
+  }
 
   #menu-icon {
     padding: 5px;
@@ -451,11 +504,14 @@ table {
     cursor: pointer;
     display: block;
     /* show menu icon */
-    font-weight: 500; }
-    #menu-icon:hover {
-      background-color: #ecebeb; }
-    #menu-icon .active {
-      background-color: #bbb; }
+    font-weight: 500;
+  }
+  #menu-icon:hover {
+    background-color: #ecebeb;
+  }
+  #menu-icon .active {
+    background-color: #bbb;
+  }
 
   #projects {
     clear: both;
@@ -463,44 +519,57 @@ table {
     background: #f8f8f8;
     display: none;
     /* visibility will be toggled with jquery */
-    margin: 5px auto 0; }
-    #projects li {
-      clear: both;
-      float: none;
-      width: 100%;
-      padding: 5px 0; }
-      #projects li a {
-        font: inherit;
-        background: none;
-        display: inline;
-        padding: 0;
-        border: none;
-        padding: 5px; }
-      #projects li:hover, #projects li.current_page_item {
-        background-color: #ecebeb; }
-        #projects li:hover a, #projects li.current_page_item a {
-          margin-left: 7px; }
+    margin: 5px auto 0;
+  }
+  #projects li {
+    clear: both;
+    float: none;
+    width: 100%;
+    padding: 5px 0;
+  }
+  #projects li a {
+    font: inherit;
+    background: none;
+    display: inline;
+    padding: 0;
+    border: none;
+    padding: 5px;
+  }
+  #projects li:hover, #projects li.current_page_item {
+    background-color: #ecebeb;
+  }
+  #projects li:hover a, #projects li.current_page_item a {
+    margin-left: 7px;
+  }
 
-  /* dropdown */ }
+  /* dropdown */
+}
 @media screen and (min-width: 481px) {
   /* ensure #projects is visible on desktop version */
   #projects {
-    display: block !important; } }
+    display: block !important;
+  }
+}
 h1, h2, h3, h4, h5, h6, p, a, li {
-  font-family: 'Dosis',Helvetica,Verdana,sans-serif; }
+  font-family: 'Dosis',Helvetica,Verdana,sans-serif;
+}
 
 a {
   text-decoration: none;
-  color: #000; }
-  a:visited, a:hover {
-    color: #000; }
+  color: #000;
+}
+a:visited, a:hover {
+  color: #000;
+}
 
 ul {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 body {
-  background: white url(img/noise4.png) repeat center center; }
+  background: white url(img/noise4.png) repeat center center;
+}
 
 header {
   color: #fff;
@@ -509,112 +578,160 @@ header {
   background: #bada55;
   margin-bottom: 10px;
   padding: 3px 0;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); }
-  header a, header a:visited {
-    color: #fff;
-    margin: 0 3px; }
-  header a:hover {
-    color: #ecebeb; }
-  header h1 {
-    margin: 0 0 4px 0; }
-  header p {
-    margin: 6px 3px; }
-  header ul {
-    display: inline-block; }
-    header ul li {
-      float: left;
-      padding: 0 20px; }
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+}
+header a, header a:visited {
+  color: #fff;
+  margin: 0 3px;
+}
+header a:hover {
+  color: #ecebeb;
+}
+header h1 {
+  margin: 0 0 4px 0;
+}
+header p {
+  margin: 6px 3px;
+}
+header ul {
+  display: inline-block;
+}
+header ul li {
+  float: left;
+  padding: 0 20px;
+}
 
 #content {
   padding: 10px;
   width: 90%;
-  margin: 0 auto; }
-  #content h1 {
-    margin: 5px 0; }
-  #content p {
-    width: 100%; }
-    #content p a {
-      background: #f8f8f8; }
-    #content p img {
-      max-width: 100%;
-      height: auto;
-      margin: 5px 0; }
+  margin: 0 auto;
+}
+#content h1 {
+  margin: 5px 0;
+}
+#content p {
+  width: 100%;
+}
+#content p a {
+  background: #f8f8f8;
+}
+#content p img {
+  max-width: 100%;
+  height: auto;
+  margin: 5px 0;
+  display: block;
+}
 
 footer {
   width: 90%;
   margin: 0 auto 20px;
-  text-align: center; }
-  footer a, footer a:visited {
-    font-size: 13px;
-    padding: 4px 8px;
-    color: #fff; }
-  footer a:hover {
-    color: #ecebeb; }
-  footer #to_top {
-    position: absolute;
-    right: 20px;
-    color: #000; }
-    footer #to_top:hover {
-      color: #ecebeb; }
-  footer h3 {
-    margin-bottom: 10px; }
-  footer .round {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    border: #f8f8f8 1px solid; }
-  footer .twitter {
-    background: #46C0FB; }
-  footer .facebook {
-    background: #4863AE; }
-  footer .linkedin {
-    background: #0083A8; }
-  footer .googleplus {
-    background: #DD4B39; }
-  footer .reddit, footer a.reddit:visited {
-    background: #fff;
-    color: #000; }
-  footer #share {
-    width: 100%;
-    text-align: center; }
-    footer #share li {
-      display: inline-block;
-      margin: 5px 2px;
-      list-style-type: none; }
+  text-align: center;
+}
+footer a, footer a:visited {
+  font-size: 13px;
+  padding: 4px 8px;
+  color: #fff;
+}
+footer a:hover {
+  color: #ecebeb;
+}
+footer #to_top {
+  position: absolute;
+  right: 20px;
+  color: #000;
+}
+footer #to_top:hover {
+  color: #ecebeb;
+}
+footer h3 {
+  margin-bottom: 10px;
+}
+footer .round {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: #f8f8f8 1px solid;
+}
+footer .twitter {
+  background: #46C0FB;
+}
+footer .facebook {
+  background: #4863AE;
+}
+footer .linkedin {
+  background: #0083A8;
+}
+footer .googleplus {
+  background: #DD4B39;
+}
+footer .reddit, footer a.reddit:visited {
+  background: #fff;
+  color: #000;
+}
+footer #share {
+  width: 100%;
+  text-align: center;
+}
+footer #share li {
+  display: inline-block;
+  margin: 5px 2px;
+  list-style-type: none;
+}
 
 @media screen and (min-width:481px) and (max-width:720px) {
   aside nav {
     width: 100%;
-    text-align: center; }
-    aside nav ul li {
-      display: inline-block;
-      margin: 2px; }
-      aside nav ul li a:hover {
-        background: #ecebeb; } }
+    text-align: center;
+  }
+  aside nav ul li {
+    display: inline-block;
+    margin: 2px;
+  }
+  aside nav ul li a:hover {
+    background: #ecebeb;
+  }
+}
 @media screen and (min-width:721px) {
   header {
     height: 90px;
-    text-align: left; }
-    header #header_content, header #global {
-      float: left; }
-    header #header_content {
-      margin-left: 2.3%; }
-      header #header_content p {
-        margin-top: 0; }
-      header #header_content a {
-        display: block; }
+    text-align: left;
+  }
+  header #header_content, header #global {
+    float: left;
+  }
+  header #header_content {
+    margin-left: 2.3%;
+  }
+  header #header_content p {
+    margin-top: 0;
+  }
+  header #header_content a {
+    display: block;
+  }
 
   aside {
     float: left;
-    width: auto;
-    margin-left: 1.5%; }
-    aside nav {
-      padding: 5px 0;
-      background: #f8f8f8; }
-      aside nav #projects li {
-        display: list-item;
-        margin-right: 0; }
+    width: 17%;
+    margin-left: 1.5%;
+  }
+  aside nav {
+    padding: 5px 0;
+    background: #f8f8f8;
+  }
+  aside nav #projects li {
+    display: list-item;
+    margin-right: 0;
+  }
+
+  section#content {
+    margin: 0 0 0 19%;
+  }
+  section#content img {
+    display: block;
+  }
 
   footer {
     float: left;
-    width: 100%; } }
+    width: 100%;
+  }
+}
