--- a/style.scss
+++ b/style.scss
@@ -124,15 +124,15 @@ footer{
 	.linkedin{background:#0083A8;}
 	.googleplus{background:#DD4B39;}
 	.reddit, a.reddit:visited{
-		background:#fff;
-		color:#000;
+		background:#F58262;
+		// color:#000;
 	}
 	#share{
 		width:100%;
 		text-align: center;
 		li{
 			display: inline-block;
-			margin:5px 2px;
+			margin:6px 0px;
 			list-style-type: none;
 		}
 	}
@@ -197,9 +197,6 @@ footer{
 	section#content{
 		// width:67%;
 		margin: 0 0 0 19%;
-		img{
-			display:block;
-		}
 	}
 	footer{
 		float:left;
