--- a/style.scss
+++ b/style.scss
@@ -35,8 +35,6 @@ body{
 }
 
 header{
-	// margin:20px !important;
-	// margin-right:20px !important;
 	color:#fff;
 	width:100%;
 	text-align:center;
@@ -59,9 +57,7 @@ header{
 	}
 	ul{
 		display:inline-block;
-		// margin-bottom:20px;
 		li{
-			// display:inline;
 			float:left;
 			padding:0 20px;
 		}
@@ -186,6 +182,7 @@ footer{
 		float:left;
 		width:17%;
 		margin-left:1.5%;
+		position:fixed;
 		nav {
 			padding:5px 0;
 			background:$grey_light;
