--- a/style.scss
+++ b/style.scss
@@ -143,7 +143,8 @@ footer{
 @media screen and (min-width:481px) and (max-width:720px){
 	aside{
 		nav{
-			width:100%;
+			width:95%;
+			margin:0 auto;
 			text-align: center;
 			ul{
 				li{
