--- a/style.css
+++ b/style.css
@@ -631,6 +631,7 @@ header ul li {
   text-align: center;
 }
 #all_projects ul li {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
@@ -679,15 +680,23 @@ footer .round {
 }
 footer .twitter {
   background: #46C0FB;
+  border: 1px solid #46C0FB;
 }
-footer .facebook {
-  background: #4863AE;
+footer .behance {
+  background: #008CFF;
+  border: 1px solid #008CFF;
 }
 footer .linkedin {
   background: #0083A8;
+  border: 1px solid #0083A8;
 }
 footer .googleplus {
   background: #DD4B39;
+  border: 1px solid #DD4B39;
+}
+footer .github {
+  background: #DADADA;
+  border: 1px solid #DADADA;
 }
 footer .reddit, footer a.reddit:visited {
   background: #F58262;
