* added '>' to the site title * changed the width of the first paragraph to make the text look better

--- a/style.scss
+++ b/style.scss
@@ -238,9 +238,10 @@ footer{
 		img{
 			display:inline;
 		}
-	}
-	#content{
-		// text-align:left;
+		h1 + p{
+			width:60%;
+		}
+
 	}
 	footer{
 		float:left;
