--- a/style.scss
+++ b/style.scss
@@ -86,6 +86,9 @@ header{
 			height:auto;
 			margin:5px 0;
 			display:block;
+			padding:20px;
+			box-shadow:0 0 5px rgba(0,0,0,0.5);
+			background:#fff;
 		}
 	}
 }
