--- a/style.scss
+++ b/style.scss
@@ -84,7 +84,7 @@ header{
 		img{
 			max-width:100%;
 			height:auto;
-			margin:5px 0;
+			margin:10px;
 			display:block;
 			padding:20px;
 			box-shadow:0 0 5px rgba(0,0,0,0.5);
