--- a/style.scss
+++ b/style.scss
@@ -107,7 +107,7 @@ header{
 			p{
 				margin:0;
 				text-align:center;
-				padding:0 0 0 7px;
+				// padding:0 0 0 7px;
 			}
 		}
 	}
@@ -163,10 +163,10 @@ footer{
 		background:#DADADA;
 		border:1px solid #DADADA;
 	}
-	.reddit, a.reddit:visited{
-		background:#F58262;
-		// color:#000;
-	}
+	// .reddit, a.reddit:visited{
+	// 	background:#F58262;
+	// 	// color:#000;
+	// }
 	#share{
 		width:100%;
 		text-align: center;
@@ -252,7 +252,7 @@ footer{
 		#to_top{
 			position: fixed;
 			right:20px;
-			bottom:75px;
+			bottom:53px;
 		}
 	}
 }
