--- a/style.scss
+++ b/style.scss
@@ -178,6 +178,16 @@ footer{
 	}
 }
 
+@media screen and (max-width:480px){
+	#section{
+		img{
+			padding:0;
+			margin:10px 0
+;		}
+	}
+}
+
+
 @media screen and (min-width:481px) and (max-width:720px){
 	aside{
 		nav{
