--- a/style.scss
+++ b/style.scss
@@ -180,9 +180,11 @@ footer{
 
 @media screen and (max-width:480px){
 	#content{
-		img{ 
-			padding:0;
-			margin:10px 0;
+		p{
+			img{ 
+				padding:0;
+				margin:10px 0;
+			}
 		}
 	}
 }
