--- a/style.css
+++ b/style.css
@@ -503,158 +503,157 @@ header ul li {
 }
 /* line 100, style.scss */
 #content.resume .section h2, #content.resume .section h3 {
-  font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
+  letter-spacing: 1px;
   font-size: 14px;
 }
-/* line 104, style.scss */
+/* line 105, style.scss */
 #content.resume .section .left {
   display: inline;
   float: left;
   width: 15%;
   text-align: right;
 }
-/* line 109, style.scss */
+/* line 110, style.scss */
 #content.resume .section .left h2 {
   display: inline;
   padding: 0 10px 0 0;
   margin: 0;
 }
-/* line 115, style.scss */
+/* line 116, style.scss */
 #content.resume .section .right {
   float: right;
   width: 85%;
 }
-/* line 119, style.scss */
+/* line 120, style.scss */
 #content.resume .section .right .heading h3 {
   margin: 0;
   display: inline;
-  font-weight: 500;
+  font-weight: 700;
 }
-/* line 124, style.scss */
+/* line 125, style.scss */
 #content.resume .section .right .heading .company {
   float: left;
 }
-/* line 127, style.scss */
+/* line 128, style.scss */
 #content.resume .section .right .heading .date {
   float: right;
 }
-/* line 130, style.scss */
+/* line 131, style.scss */
 #content.resume .section .right .heading .position {
   width: 100%;
   float: left;
 }
-/* line 135, style.scss */
+/* line 136, style.scss */
 #content.resume .section .right p, #content.resume .section .right li {
-  font-family: Palatino,Georgia,"Times New Roman",serif;
   font-size: 14px;
   line-height: 20px;
 }
-/* line 140, style.scss */
+/* line 141, style.scss */
 #content.resume .section .right p {
   margin: 0;
   float: left;
 }
-/* line 144, style.scss */
+/* line 145, style.scss */
 #content.resume .section .right ul {
   list-style: none;
   padding-top: 2px;
 }
 
-/* line 153, style.scss */
+/* line 154, style.scss */
 #all_projects {
   width: 100%;
   text-align: center;
 }
-/* line 157, style.scss */
+/* line 158, style.scss */
 #all_projects ul li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
 }
-/* line 162, style.scss */
+/* line 163, style.scss */
 #all_projects ul li:hover {
   background: #d4d4d4;
 }
-/* line 163, style.scss */
+/* line 164, style.scss */
 #all_projects ul li a {
   padding: 5px;
 }
-/* line 164, style.scss */
+/* line 165, style.scss */
 #all_projects ul li p {
   margin: 0;
   text-align: center;
   padding: 5px 0;
 }
 
-/* line 172, style.scss */
+/* line 173, style.scss */
 footer {
   width: 90%;
   margin: 0 auto 20px;
   text-align: center;
 }
-/* line 177, style.scss */
+/* line 178, style.scss */
 footer a, footer a:visited {
   font-size: 13px;
   padding: 4px 8px;
   color: #fff;
 }
-/* line 182, style.scss */
+/* line 183, style.scss */
 footer a:hover {
   color: #d4d4d4;
 }
-/* line 185, style.scss */
+/* line 186, style.scss */
 footer #to_top {
   position: absolute;
   right: 20px;
   color: #000;
 }
-/* line 189, style.scss */
+/* line 190, style.scss */
 footer #to_top:hover {
   color: #d4d4d4;
 }
-/* line 193, style.scss */
+/* line 194, style.scss */
 footer h3 {
   margin-bottom: 10px;
 }
-/* line 197, style.scss */
+/* line 198, style.scss */
 footer .round {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: #f8f8f8 1px solid;
 }
-/* line 203, style.scss */
+/* line 204, style.scss */
 footer .twitter {
   background: #46C0FB;
   border: 1px solid #46c0fb;
 }
-/* line 207, style.scss */
+/* line 208, style.scss */
 footer .behance {
   background: #008CFF;
   border: 1px solid #008cff;
 }
-/* line 211, style.scss */
+/* line 212, style.scss */
 footer .linkedin {
   background: #0083A8;
   border: 1px solid #0083a8;
 }
-/* line 215, style.scss */
+/* line 216, style.scss */
 footer .googleplus {
   background: #DD4B39;
   border: 1px solid #dd4b39;
 }
-/* line 219, style.scss */
+/* line 220, style.scss */
 footer .github {
   background: #DADADA;
   border: 1px solid #dadada;
 }
-/* line 227, style.scss */
+/* line 228, style.scss */
 footer #share {
   width: 100%;
   text-align: center;
 }
-/* line 230, style.scss */
+/* line 231, style.scss */
 footer #share li {
   display: inline-block;
   margin: 6px 0px;
@@ -662,11 +661,11 @@ footer #share li {
 }
 
 @media screen and (max-width: 320px) {
-  /* line 239, style.scss */
+  /* line 240, style.scss */
   #global-nav {
     padding: 10px 0;
   }
-  /* line 241, style.scss */
+  /* line 242, style.scss */
   #global-nav li {
     display: inline;
     padding: 0 13px;
@@ -674,95 +673,95 @@ footer #share li {
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 251, style.scss */
+  /* line 252, style.scss */
   #content p img {
     padding: 0;
     margin: 10px 0;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 720px) {
-  /* line 261, style.scss */
+  /* line 262, style.scss */
   aside nav {
     width: 95%;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 266, style.scss */
+  /* line 267, style.scss */
   aside nav ul li {
     display: inline-block;
     margin: 2px;
   }
-  /* line 269, style.scss */
+  /* line 270, style.scss */
   aside nav ul li a:hover {
     background: #d4d4d4;
   }
 }
 @media screen and (min-width: 721px) {
-  /* line 279, style.scss */
+  /* line 280, style.scss */
   header {
     height: 90px;
     text-align: left;
   }
-  /* line 282, style.scss */
+  /* line 283, style.scss */
   header #header_content, header #global {
     float: left;
   }
-  /* line 285, style.scss */
+  /* line 286, style.scss */
   header #header_content {
     margin-left: 2.3%;
   }
-  /* line 287, style.scss */
+  /* line 288, style.scss */
   header #header_content p {
     margin-top: 0;
   }
-  /* line 290, style.scss */
+  /* line 291, style.scss */
   header #header_content a {
     display: block;
   }
-  /* line 294, style.scss */
+  /* line 295, style.scss */
   header #global {
     margin-top: 17px;
   }
 
-  /* line 299, style.scss */
+  /* line 300, style.scss */
   aside {
     float: left;
     width: 17%;
     margin-left: 1.5%;
     position: fixed;
   }
-  /* line 304, style.scss */
+  /* line 305, style.scss */
   aside nav {
     padding: 5px 0;
     background: #f8f8f8;
   }
-  /* line 308, style.scss */
+  /* line 309, style.scss */
   aside nav #projects li {
     display: list-item;
     margin-right: 0;
   }
 
-  /* line 315, style.scss */
+  /* line 316, style.scss */
   section#content {
     width: 77%;
     margin: 0 0 0 19%;
     padding: 2%;
   }
-  /* line 319, style.scss */
+  /* line 320, style.scss */
   section#content img {
     display: inline;
   }
-  /* line 322, style.scss */
+  /* line 323, style.scss */
   section#content h1 + p {
     width: 60%;
   }
 
-  /* line 327, style.scss */
+  /* line 328, style.scss */
   footer {
     float: left;
     width: 100%;
   }
-  /* line 330, style.scss */
+  /* line 331, style.scss */
   footer #to_top {
     position: fixed;
     right: 20px;
