--- a/style.css
+++ b/style.css
@@ -316,27 +316,27 @@ table {
 #projects li {
   list-style: none;
   margin-right: 5px;
+  background: #f8f8f8;
 }
 /* line 11, inc/_navigation.scss */
 #projects li a {
   padding: 4px 15px;
   display: block;
   color: #000;
-  background: #f8f8f8;
 }
 /* line 16, inc/_navigation.scss */
-#projects li a:hover {
-  background: #d4d4d4;
+#projects li:hover, #projects li.current_page_item {
+  background-color: #d4d4d4;
 }
 
 @media screen and (max-width: 480px) {
-  /* line 25, inc/_navigation.scss */
+  /* line 23, inc/_navigation.scss */
   aside nav {
     margin: 0 auto;
     width: 90%;
   }
 
-  /* line 30, inc/_navigation.scss */
+  /* line 27, inc/_navigation.scss */
   #menu-icon {
     padding: 5px;
     text-align: center;
@@ -346,16 +346,16 @@ table {
     /* show menu icon */
     font-weight: 500;
   }
-  /* line 38, inc/_navigation.scss */
+  /* line 35, inc/_navigation.scss */
   #menu-icon:hover {
     background-color: #d4d4d4;
   }
-  /* line 41, inc/_navigation.scss */
+  /* line 38, inc/_navigation.scss */
   #menu-icon .active {
     background-color: #bbb;
   }
 
-  /* line 45, inc/_navigation.scss */
+  /* line 42, inc/_navigation.scss */
   #projects {
     clear: both;
     z-index: 10000;
@@ -364,14 +364,14 @@ table {
     /* visibility will be toggled with jquery */
     margin: 5px auto 0;
   }
-  /* line 52, inc/_navigation.scss */
+  /* line 49, inc/_navigation.scss */
   #projects li {
     clear: both;
     float: none;
     width: 100%;
     padding: 5px 0;
   }
-  /* line 58, inc/_navigation.scss */
+  /* line 55, inc/_navigation.scss */
   #projects li a {
     font: inherit;
     background: none;
@@ -380,22 +380,26 @@ table {
     border: none;
     padding: 5px;
   }
-  /* line 66, inc/_navigation.scss */
+  /* line 63, inc/_navigation.scss */
   #projects li:hover, #projects li.current_page_item {
     background-color: #d4d4d4;
   }
-  /* line 68, inc/_navigation.scss */
+  /* line 65, inc/_navigation.scss */
   #projects li:hover a, #projects li.current_page_item a {
     margin-left: 7px;
   }
-
-  /* dropdown */
 }
 @media screen and (min-width: 481px) {
   /* ensure #projects is visible on desktop version */
-  /* line 82, inc/_navigation.scss */
+  /* line 75, inc/_navigation.scss */
   #projects {
     display: block !important;
+  }
+}
+@media screen and (min-width: 721px) {
+  /* line 83, inc/_navigation.scss */
+  #projects li a:hover {
+    padding-left: 20px;
   }
 }
 /* line 1, inc/_main.scss */
@@ -474,48 +478,36 @@ header ul li {
 header #global li {
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
+  background: #bada55;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
-/* line 63, inc/_main.scss */
+/* line 65, inc/_main.scss */
 header #global li:hover {
-  -webkit-transform: translate(0, -5px);
-  -moz-transform: translate(0, -5px);
-}
-/* line 68, inc/_main.scss */
-header #global #global-nav li {
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -o-transition: all 1s;
-  -ms-transition: all 1s;
-  transition: all 1s;
-}
-/* line 75, inc/_main.scss */
-header #global #global-nav li:hover a {
-  -webkit-transform: translate(0, -5px);
-  -moz-transform: translate(0, -5px);
-  -o-transform: translate(0, -5px);
-  -ms-transform: translate(0, -5px);
-  transform: translate(0, -5px);
+  -webkit-transform: translate(0, -2px);
+  -moz-transform: translate(0, -2px);
+  text-shadow: 0;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
-/* line 90, inc/_main.scss */
+/* line 91, inc/_main.scss */
 #content {
   padding: 10px;
   width: 90%;
   margin: 0 auto;
 }
-/* line 95, inc/_main.scss */
+/* line 96, inc/_main.scss */
 #content h1 {
   margin: 5px 0;
 }
-/* line 99, inc/_main.scss */
+/* line 100, inc/_main.scss */
 #content h1 + p a {
   background: #d4d4d4;
 }
-/* line 102, inc/_main.scss */
+/* line 103, inc/_main.scss */
 #content h1 + p a:hover {
   background: #f8f8f8;
 }
-/* line 107, inc/_main.scss */
+/* line 108, inc/_main.scss */
 #content p img {
   max-width: 100%;
   height: auto;
@@ -525,139 +517,139 @@ header #global #global-nav li:hover a {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   background: #fff;
 }
-/* line 119, inc/_main.scss */
+/* line 120, inc/_main.scss */
 #content.resume .section {
   padding-bottom: 20px;
   overflow: hidden;
 }
-/* line 122, inc/_main.scss */
+/* line 123, inc/_main.scss */
 #content.resume .section h2, #content.resume .section h3 {
   letter-spacing: 1px;
   font-size: 14px;
 }
-/* line 128, inc/_main.scss */
+/* line 129, inc/_main.scss */
 #content.resume .section .left h2 {
   display: inline;
   padding: 0 10px 0 0;
   margin: 0;
 }
-/* line 136, inc/_main.scss */
+/* line 137, inc/_main.scss */
 #content.resume .section .right .heading h3 {
   margin: 0;
   display: block;
   font-weight: 700;
 }
-/* line 142, inc/_main.scss */
+/* line 143, inc/_main.scss */
 #content.resume .section .right p, #content.resume .section .right li {
   font-size: 14px;
   line-height: 20px;
 }
-/* line 146, inc/_main.scss */
+/* line 147, inc/_main.scss */
 #content.resume .section .right p {
   margin: 0;
   float: left;
 }
-/* line 150, inc/_main.scss */
+/* line 151, inc/_main.scss */
 #content.resume .section .right ul {
   list-style: none;
   padding-top: 2px;
 }
 
-/* line 159, inc/_main.scss */
+/* line 160, inc/_main.scss */
 #all_projects {
   width: 100%;
   text-align: center;
 }
-/* line 163, inc/_main.scss */
+/* line 164, inc/_main.scss */
 #all_projects ul li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
 }
-/* line 168, inc/_main.scss */
+/* line 169, inc/_main.scss */
 #all_projects ul li:hover {
   background: #d4d4d4;
 }
-/* line 169, inc/_main.scss */
+/* line 170, inc/_main.scss */
 #all_projects ul li a {
   padding: 5px;
 }
-/* line 170, inc/_main.scss */
+/* line 171, inc/_main.scss */
 #all_projects ul li p {
   margin: 0;
   text-align: center;
   padding: 5px 0;
 }
 
-/* line 178, inc/_main.scss */
+/* line 179, inc/_main.scss */
 footer {
   width: 90%;
   margin: 0 auto 20px;
   text-align: center;
 }
-/* line 183, inc/_main.scss */
+/* line 184, inc/_main.scss */
 footer a, footer a:visited {
   font-size: 13px;
   padding: 4px 8px;
   color: #fff;
 }
-/* line 188, inc/_main.scss */
+/* line 189, inc/_main.scss */
 footer a:hover {
   color: #d4d4d4;
 }
-/* line 191, inc/_main.scss */
+/* line 192, inc/_main.scss */
 footer #to_top {
   position: absolute;
   right: 20px;
   color: #000;
 }
-/* line 195, inc/_main.scss */
+/* line 196, inc/_main.scss */
 footer #to_top:hover {
   color: #d4d4d4;
 }
-/* line 199, inc/_main.scss */
+/* line 200, inc/_main.scss */
 footer h3 {
   margin-bottom: 10px;
 }
-/* line 203, inc/_main.scss */
+/* line 204, inc/_main.scss */
 footer .round {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: #f8f8f8 1px solid;
 }
-/* line 209, inc/_main.scss */
+/* line 210, inc/_main.scss */
 footer .twitter {
   background: #46C0FB;
   border: 1px solid #46c0fb;
 }
-/* line 213, inc/_main.scss */
+/* line 214, inc/_main.scss */
 footer .behance {
   background: #008CFF;
   border: 1px solid #008cff;
 }
-/* line 217, inc/_main.scss */
+/* line 218, inc/_main.scss */
 footer .linkedin {
   background: #0083A8;
   border: 1px solid #0083a8;
 }
-/* line 221, inc/_main.scss */
+/* line 222, inc/_main.scss */
 footer .googleplus {
   background: #DD4B39;
   border: 1px solid #dd4b39;
 }
-/* line 225, inc/_main.scss */
+/* line 226, inc/_main.scss */
 footer .github {
   background: #DADADA;
   border: 1px solid #dadada;
 }
-/* line 229, inc/_main.scss */
+/* line 230, inc/_main.scss */
 footer #share {
   width: 100%;
   text-align: center;
 }
-/* line 232, inc/_main.scss */
+/* line 233, inc/_main.scss */
 footer #share li {
   display: inline-block;
   margin: 6px 0px;
@@ -665,6 +657,20 @@ footer #share li {
 }
 
 @media screen and (max-width: 480px) {
+  /* line 1, inc/_media_queries.scss */
+  body::before {
+    content: "max 480";
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    background: pink;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
   /* line 11, inc/_media_queries.scss */
   #content p img {
     padding: 0;
@@ -672,6 +678,20 @@ footer #share li {
   }
 }
 @media screen and (min-width: 481px) and (max-width: 720px) {
+  /* line 1, inc/_media_queries.scss */
+  body::before {
+    content: "min 481 max 720";
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    background: blue;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
   /* line 28, inc/_media_queries.scss */
   aside nav {
     width: 95%;
@@ -704,6 +724,20 @@ footer #share li {
   }
 }
 @media screen and (min-width: 637px) {
+  /* line 1, inc/_media_queries.scss */
+  body::before {
+    content: "min 637";
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    background: yellow;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
   /* line 73, inc/_media_queries.scss */
   #content.resume .section .right .company {
     width: 100%;
@@ -714,6 +748,20 @@ footer #share li {
   }
 }
 @media screen and (min-width: 721px) {
+  /* line 1, inc/_media_queries.scss */
+  body::before {
+    content: "min 721";
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    background: green;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
   /* line 90, inc/_media_queries.scss */
   header {
     height: 90px;
@@ -795,6 +843,20 @@ footer #share li {
   }
 }
 @media screen and (min-width: 851px) {
+  /* line 1, inc/_media_queries.scss */
+  body::before {
+    content: "min 851";
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    background: lightblue;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
   /* line 170, inc/_media_queries.scss */
   #content.resume {
     width: 50%;
